# zmk-steno-engine

./: .gitignore  CMakeLists.txt  Kconfig  LICENSE  README.md
dicts/: test.json
dts/behaviors/: steno_engine.dtsi
dts/bindings/behaviors/: zmk,behavior-steno-engine.yaml
include/dt-bindings/zmk/: steno_keys.h
src/: behavior_steno.c  dict_embed.S  dict_mphf.c  dict_mphf.h  dict_v4.c  dict_v4.h  formatter.c  formatter.h  inflate.c  inflate.h  output.c  output.h  split_cache.c  split_cache.h  split_dict.c  split_dict.h  trie.c  trie.h  undo.c  undo.h
tests/: run_tests.sh  test_dict_v4.c  test_formatter.c  test_mphf.c  test_trie.c  test_undo.c
tools/: alt_approaches.py  compile_mphf.py  compile_simple.py  compile_v4.py  compression_benchmark.py  dawg_fst_prototype.py  dict_compiler.py  fetch_dict.py  requirements.txt  test_compiler.py
